See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.46.00

              picttoppm: Don't fail if 'fontdir' file doesn't exist.  Bug
              from 10.44.

              ilbmtoppm: fix bug: appends color map PPM to output if input
              has color map; fails if input doesn't have color map.  Broken
              in 10.18.

              leaftoppm: fix bug: uses red channel as all three channels;
              (produces grayscale output).  Broken between 10.19 and 10.26,
              inclusive.

              pbmtomrf, mrftopbm: fix crashes, incorrect output in all
              cases.  Broken forever.

              pamcut: fix bug with PBM and -pad.

08.12.28 BJH  Release 10.45.00

              pgmnoise: Add -randomseed.

              ppmtobmp: Add -mapfile option.

              pnm_createBlackTuple(): Fix array bounds violation with
              PBM, PGM.

              pnmtoddif: Fix crash with any PGM input.

              pgmnoise: Fix bug: never generates full white pixel.

              pamditherbw: Fix -value other than .5 with -fs, -atkinson.

              Configure: fix crash when Libxml2 is installed, but not new
              enough version.

              Build: Use GNU compile options for Darwin.

              Build: Move CFLAGS later in libjasper and librle build so that a
              -I in CFLAGS doesn't interfere with finding the local libjasper
              and Netpbm header files.

              Build: Move LDFLAGS later so that a -L in LDFLAGS doesn't
              interfere with finding the built libnetpbm.  (The common
              link rule is already this way in 10.44.00; all the other
              link rules are now the same).

              Build: Rename Makefile.common, Makefile.config, to common.mk,
              etc.

              Build: Add source type declarations to make -ansi compile work.

08.09.27 BJH  Release 10.44.00
