@@ -6,6 +6,8 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.46.00
 
+              picttoppm: Improve error/informational messages.
+
               picttoppm: Don't fail if 'fontdir' file doesn't exist.  Bug
               from 10.44.
 
